--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "build": "webpack --mode=production"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.15.6",
-    "babel-core": "^6.26.3"
+    "@babel/preset-env": "^7.15.",
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
